object inlinings